# android_dynamic_encryption

./: README.md
string_confusion/: CMakeLists.txt  README.md  make.sh
string_confusion/include/: caculator.h  elf_reader.h  elf_write.h  log.h  utils.h
string_confusion/src/: caculator.cpp  decrypt.cpp  encrypt.cpp  main.cpp
